<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment"

     >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/relative1"
                android:layout_centerHorizontal="true"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="horizontal"
                android:padding="20dp"
                android:visibility="gone" >

                <RadioButton
                    android:id="@+id/radioCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="true"
                    android:paddingRight="20dp"
                    android:text="@string/create_archive" />

                <RadioButton
                    android:id="@+id/radioOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/open_archive" />
            </RadioGroup>
<TextView
                android:id="@+id/textViewSelectTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup1"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="Lock / Unlock"
                android:textSize="15dp"
                android:focusable="true" 
    android:focusableInTouchMode="true" />
            <RelativeLayout
                android:id="@+id/relative5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSelectTask"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="10dp" >

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/_device_access_not_secure"
                    android:paddingTop="10dp"
                    android:text="@string/button_save" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textOff=" Lock "
                    android:textOn=" Unlock "
                    android:thumb="@drawable/switch_inner_holo_light"
                    android:track="@drawable/switch_track_holo_light" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textViewArchiveName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative5"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/archive_name"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewArchiveName"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/linearDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/buttonDummy"
                        android:layout_width="1px"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <ImageButton
                        android:id="@+id/buttonDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/_collections_collection"
                        android:text="Browse"
                        android:visibility="visible" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextArchiveName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/linearDelete"
                    android:ems="10"
                    android:inputType="none"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative1"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/key_textview"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewKey"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:padding="10dp"
                 >

                <ImageButton
                    android:id="@+id/buttonCreateKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/_device_access_new_account"
                    android:text="Create" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/buttonCreateKey"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                     >

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:focusableInTouchMode="true"
                       />

                    <Spinner
                        android:id="@+id/spinnerMode"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:focusableInTouchMode="true"
                        
                         />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>